# coding-agent

./: README.md  pyproject.toml
agent/: __init__.py  auth.py  builder.py  cli.py  config.py  context.py  engine.py  file_writer.py  fixer.py  git_ops.py  mcp_server.py  session_store.py  springboot_scaffolder.py
coding_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_auth.py  test_context.py  test_engine.py  test_git_ops.py
